--- a/RAGMARtos.X/nbproject/Makefile-genesis.properties
+++ b/RAGMARtos.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,13 @@
 #
-#Sun Nov 30 11:46:42 BRST 2025
-default.com-microchip-mplab-nbide-toolchainAVR-AVRLanguageToolchain.md5=9fe40cc5abd02c25f07892682df44afb
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Atmel\\Studio\\7.0\\toolchain\\avr8\\avr8-gnu-toolchain\\bin
-configurations-xml=2ef36ba42af9ed0294ae4b5b898e0d2f
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
+#Tue Dec 02 07:25:26 BRT 2025
 default.languagetoolchain.version=5.4.0
-host.platform=windows
+default.Pack.dfplocation=C\:\\Users\\Estudo\\.mchp_packs\\Microchip\\ATmega_DFP\\2.0.2
+default.com-microchip-mplab-nbide-toolchain-avr-AVRLanguageToolchain.md5=7077cb0f7d3286937e616ce3e96e957a
+default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=dfa5072717bd9b5ee048264bb12740c3
 conf.ids=default
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Atmel\\Studio\\7.0\\toolchain\\avr8\\avr8-gnu-toolchain\\bin
+host.id=1241-s6km-5o
+configurations-xml=bcf8eee43e97dae5a07f5696e8d64296
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
+proj.dir=C\:\\Users\\Estudo\\Documents\\Rafael\\Projetos_AVR\\RAGMARtos\\RAGMARtos.X
+host.platform=windows
